k3s-manifest/mlflow/deploy-mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: kopikamu230/mlflow-capstone:v3
          ports:
            - containerPort: 5000
          command: ["mlflow"]
          args:
            - server
            - --backend-store-uri=sqlite:////mlflow/mlflow.db
            - --default-artifact-root=s3://mlflow/
            - --host=0.0.0.0
            - --port=5000
          volumeMounts:
            - name: mlflow-data
              mountPath: /mlflow
      volumes:
        - name: mlflow-data
          persistentVolumeClaim:
            claimName: mlflow-pvc
